feat: Add products crud

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
   "workbench.colorCustomizations": {
     "editorIndentGuide.background": "#fff0",
-    "activityBar.background": "#003337",
-    "titleBar.activeBackground": "#01484D",
+    "titleBar.activeBackground": "#3a0aac",
     "titleBar.activeForeground": "#ECFEFF"
   }
 }
